Make z-indexes sane, and fix z-index for infinite scroll footer

--- a/less/_structure.less
+++ b/less/_structure.less
@@ -26,6 +26,9 @@
 	clear: both;
 	width: 100%;
 }
+#infinite-footer {
+	z-index: 20;
+}
 /* @end */
 
 /* @group PER-POST */
@@ -60,7 +63,7 @@
 		position: relative;
 		margin: 0;
 		padding-right: 26.4705882%;
-		z-index: 100;
+		z-index: 15;
 	}
 }
 .comment-links {
@@ -81,7 +84,7 @@
 footer.entry-meta {
 	position: relative;
 	overflow: hidden;
-	z-index: 50;
+	z-index: 10;
 	width: 26.4705882%;
 	padding-bottom: 30px;
 }
